manifests/garden-io/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wego-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ${var.default-hostname}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wego-app
                port:
                  number: 9001
